--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,11 @@ python:
 install:
   # http://conda.pydata.org/docs/travis.html
   - sudo apt-get update
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
@@ -21,7 +25,7 @@ install:
 
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy six pytest-cov
   - source activate test-environment
-  - pip install -r requirements/requirements-test.txt
+  - pip install -r requirements/requirements-test.txt;
   - pip install codecov
 
 script:
