--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -33,6 +33,7 @@ pylint:
     - too-many-instance-attributes
     - too-many-locals
     - unused-argument
+    - syntax-error
   enable:
     - missing-final-newline
   options:
